--- a/Examples/Run/Reconstruction/CMakeLists.txt
+++ b/Examples/Run/Reconstruction/CMakeLists.txt
@@ -119,6 +119,17 @@ target_link_libraries(
       ActsExamplesRecTracksCommon)
 # =================================================
 
+# Seeding for ITk detector
+add_executable(
+  ActsExampleSeedingITk
+  ITkSeedingExample.cpp)
+target_link_libraries(
+  ActsExampleSeedingITk
+  PRIVATE
+    ActsExamplesRecTracksCommon
+    ActsExamplesDetectorGeneric
+)
+
 install(
   TARGETS
     ActsExampleTruthTracksGeneric
@@ -129,6 +140,7 @@ install(
     ActsExampleCKFTracksTelescope
     ActsExampleSeedingGeneric
     ActsExampleSeedingTGeo
+    ActsExampleSeedingITk
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 add_subdirectory_if(DD4hep ACTS_BUILD_EXAMPLES_DD4HEP)
